# stm_cmake_example

./: README.md
Nucleo_F446RE/: .gitignore  CMakeLists.txt  Nucleo_F446RE.ioc  main.c
Nucleo_F446RE/Core/Src/: main.c
Nucleo_F446RE/Drivers/: CMakeLists.txt
Nucleo_F446RE/cmake/: arm-gcc-toolchain.cmake  constants.cmake
